# headshot

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  headshot_ui_ref.html  justfile
.config/: nextest.toml
crates/headshot-capture/: Cargo.toml
crates/headshot-capture/src/: assemble.rs  error.rs  keyframe.rs  lib.rs  lut.rs  manifest.rs  photo.rs  plan.rs  preprocess.rs  raw.rs  srt.rs  video.rs
crates/headshot-capture/tests/: assemble_mock.rs  samples.rs
crates/headshot-capture/tests/data/ffprobe/: mavic2pro-2688x1512.json
crates/headshot-capture/tests/data/lut/: contrast3.cube  identity2.cube
crates/headshot-capture/tests/data/srt/: dji-villa-excerpt.srt
crates/headshot-client/: Cargo.toml
crates/headshot-client/src/: export.rs  main.rs  session.rs
crates/headshot-client/src/ui/: log.rs  mod.rs  reconstruct.rs  review.rs  setup.rs  theme.rs  worker.rs
crates/headshot-server/: Cargo.toml  build.rs
crates/headshot-server/shaders/: attention.wesl  attn_merge.wesl  bilinear.wesl  cast_f16_to_f32.wesl  cast_f32_to_f16.wesl  concat_channels.wesl  gelu.wesl  im2col3x3.wesl  im2col_patch.wesl  layernorm.wesl  linear.wesl  linear_wmma.wgsl  qkv_split.wesl  residual_add.wesl  residual_ls.wesl  rope_apply.wesl  shuffle_expand.wesl  split_heads.wesl  tiled_add.wesl  unary.wesl
crates/headshot-server/src/: lib.rs  main.rs  parity.rs  server.rs  weights.rs
crates/headshot-server/src/engine/: mod.rs  ops.rs  rope.rs  tensor.rs
crates/headshot-server/src/model/: block.rs  cache.rs  camera_head.rs  dense_head.rs  dino.rs  mod.rs  trunk.rs
crates/headshot-server/tests/: dense_kernels.rs  f16_ops.rs  gpu_smoke.rs  kernels.rs  memtrace.rs  parity.rs  sensitivity.rs  session.rs  timing.rs
crates/headshot-shared/: Cargo.toml
crates/headshot-shared/src/: filter.rs  lib.rs  model.rs  ply.rs  pose.rs  protocol.rs  sizing.rs
doc/: 01-model-spec.md  02-weights-and-parity.md  03-server-inference.md  04-pipeline-protocol.md  05-client.md  06-scale-and-output.md  07-capture-ui.md  README.md  m3-viewer-checklist.md
tools/: README.md  convert_weights.py  dump_reference.py
